# fabulous-tiles

./: .gitignore  Makefile  README.md  custom.v  fabulous_tiles.csv  flake.nix  implement.py  models_pack.v  readthedocs.yaml  tiles.py
.github/workflows/: ci.yml
docs/: pyproject.toml
docs/source/: conf.py  index.md
docs/source/_ext/: generate_docs.py
docs/source/_templates/: all_primitives.md  all_tiles.md
docs/source/primitives/: all_primitives.md
docs/source/tiles/: all_tiles.md
primitives/FABULOUS_LC/: README.md
primitives/GBUF/: README.md
primitives/IBUF/: README.md
primitives/IDDR/: README.md
primitives/IHP_SRAM_1024x16_2RW/: README.md
primitives/IHP_SRAM_1024x32_1RW/: README.md
primitives/IOBUF/: README.md
primitives/LUT4_C_DFFESR/: README.md
primitives/MACC_8x8_20/: README.md
primitives/OBUF/: README.md
primitives/ODDR/: README.md
primitives/RAM_32x4_2R_1W/: README.md
primitives/SYS_RESET/: README.md
primitives/TBUF/: README.md
primitives/TT_PROJECT/: README.md
primitives/TT_PROJECT_LARGE/: README.md
primitives/TT_PROJECT_MUX/: README.md
primitives/WARMBOOT/: README.md
tiles/8xLUT4_C/: LUT4AB.csv  LUT4AB_switch_matrix.list  README.md
tiles/E_IO/: E_IO.csv  E_IO.v  E_IO_switch_matrix.list  config.yaml
tiles/LUT4x8_C/: LUT4x8_C.csv  LUT4x8_C_switch_matrix.list  README.md  config.yaml
tiles/LUT4x8_ha/: LUT4x8_ha.csv  config.yaml
tiles/MACC/: config.yaml
tiles/NE_term/: config.yaml
tiles/NW_term/: NW_term.csv  NW_term_switch_matrix.list  config.yaml
tiles/N_IO/: N_IO.csv  N_IO.v  N_IO_switch_matrix.list  (+1 more)
(+269 files in other folders)
